--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+/* HEADER */
 header {
     display: flex;
     flex-direction: column;
@@ -11,19 +12,22 @@ header {
     align-items: center;
 }
 
+/* BODY */
 body {
     font-family: 'Roboto', sans-serif;
 }
 
+/* HTML */
 html {
     scroll-behavior: smooth;
 }
 
 .container {
     width: 100%;
+    height: 100%;
     padding: 2rem;
     text-align: center;
-    background-color: #fff;
+    background-color: #f5f5f5;
     color: #000;
 }
 
@@ -35,6 +39,7 @@ html {
     color: #fff;
 }
 
+/* NAVIGATION */
 .navbar {
     width: 100%;
     padding: 0.5rem;
@@ -117,38 +122,106 @@ li {
     margin-bottom: 0.5rem;
 }
 
-.section-container {
+
+/* ABOUT ME SECTION */
+.section-about-me {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 2rem 3rem;
-    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.sub-section-container {
-    width: 45%;
+.about-me-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
     padding: 2rem;
-    text-align: center;
 }
 
-.projects-container {
+.information-container {
+    width: 100%;
+    height: 100%;
+    margin: 0 5rem 0 10rem;
+    padding: 2rem;
+}
+
+.profile-photo-container {
+    width: 100%;
+    height: 100%;
     display: flex;
-    justify-content: space-between;
-    max-width: 1400px;
-    margin: 0 auto;
+    justify-content: center;
 }
 
-.sub-project-container {
-    width: 45%;
+
+/* WORK-EXPERIENCE & EDUCATION SECTION */
+.section-work-education {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* WORK-EXPERIENCE SUBSECTION */
+.work-education-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 2rem;
+}
+
+.work-experience-container {
+    width: 100%;
+    height: 100%;
+    margin: 0 5rem 0 10rem;
     padding: 1rem;
 }
 
+/* EDUCATION SUBSECTION */
+.education-container {
+    width: 100%;
+    height: 100%;
+    margin: 0 10rem 0 5rem;
+    padding: 1rem;
+}
+
+.education-container li {
+    margin: 1rem 0 3rem 0;
+}
+
+
+/* PROJECTS SECTION */
+.section-projects {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.projects-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.sub-project-container {
+    height: 100%;
+    padding: 2rem;
+}
+
 .projects-titles {
+    margin-bottom: 1rem;
     font-size: 2rem;
     color: #d4af37;
 }
 
+
+/* SKILLS SECTION */
 .section-skills {
     width: 100%;
     display: flex;
@@ -183,10 +256,11 @@ li {
 .skills-container ul li i {
     font-size: 40px;
     margin-right: 20px;
-    color: #1ed760;
+    color: #d4af37;
 }
 
 
+/* CONTACT SECTION */
 #contact {
     display: flex;
     justify-content: space-between;
@@ -229,10 +303,11 @@ button {
     cursor: pointer;
 }
 
+/* FOOTER */
 .footer {
     text-align: center;
     padding: 1rem;
-    background-color: #f5f5f5;
+    background-color: #f8f8f8;
     font-size: 0.9rem;
     font-weight: bold;
 }
