--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,14 @@ img {
     border-radius: 10px;
 }
 
+a {
+    color: #d4af37;
+    text-decoration: none;
+    font-weight: bold;
+    text-align: start;
+    font-size: 1.3rem;
+    margin: 0.5rem 0 0.5rem 0;
+}
 
 /* ABOUT ME SECTION */
 .about-me-section {
@@ -146,7 +154,7 @@ img {
 .information-container {
     width: 100%;
     height: 100%;
-    margin: 0 0rem 0 10rem;
+    margin: 0 0 0 10rem;
     padding: 2rem;
 }
 
@@ -287,19 +295,29 @@ img {
     height: 100%;
     display: flex;
     justify-content: center;
+    padding: 0 5rem;
 }
 
 .contact-information-container {
-    width: 50%;
-    height: 100%;
-    margin: 0 1rem 0 5rem;
-    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.contact-information-container i {
+    color: #d4af37;
+}
+
+.social-links {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .form-container {
     width: 50%;
     height: 100%;
-    margin: 2rem;
+    margin: 2rem 0 2rem 5rem;
 }
 
 form {
