--- a/styles.css
+++ b/styles.css
@@ -259,24 +259,20 @@ a {
 }
 
 .skills-container ul {
-    width: 200px;
-    margin: 10px 100px;
-    padding: 20px 0;
+    margin: 0.1rem 5rem;
 }
 
 .skills-container ul li {
     width: 100%;
-    height: 30px;
-    font-size: 18px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    margin: 30px 5px;
+    margin: 2rem 4rem;
 }
 
 .skills-container ul li i {
-    font-size: 40px;
-    margin-right: 20px;
+    font-size: 3rem;
+    margin-right: 1rem;
     color: #d4af37;
 }
 
@@ -301,7 +297,7 @@ a {
 .contact-information-container {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 1rem;
 }
 
 .contact-information-container i {
