--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ html {
     text-align: center;
     background-color: #f5f5f5;
     color: #000;
+    padding: 0 5rem;
 }
 
 .black-container {
@@ -35,6 +36,7 @@ html {
     text-align: center;
     background-color: #000;
     color: #fff;
+    padding: 0 5rem;
 }
 
 /* NAVIGATION */
@@ -76,30 +78,30 @@ html {
 
 .title {
     margin-bottom: 1rem;
-    font-size: 3.5rem;
+    font-size: 3rem;
     text-align: center;
 }
 
 .subtitle {
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: #d4af37;
     font-weight: bold;
 }
 
 h2 {
     margin-top: 1rem;
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     text-align: center;
 }
 
 h3 {
     margin-top: 1rem;
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 
 h4 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     color: #000;
 }
 
@@ -112,7 +114,10 @@ h4 {
     margin-top: 1rem;
     margin-bottom: 1rem;
     line-height: 1.5;
-    font-size: 1.3rem;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 li {
@@ -142,6 +147,8 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0;
+    margin: 0;
 }
 
 .about-me-container {
@@ -149,13 +156,19 @@ a {
     height: 100%;
     display: flex;
     justify-content: center;
+    padding: 0;
+    margin: 0;
 }
 
 .information-container {
+    display: flex;
     width: 100%;
     height: 100%;
     margin: 0 0 0 10rem;
-    padding: 2rem;
+    padding: 5rem 0 0 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .profile-photo-container {
@@ -164,7 +177,7 @@ a {
     display: flex;
     justify-content: center;
     align-content: center;
-    padding: 5rem;
+    padding: 2rem;
 }
 
 
@@ -197,7 +210,7 @@ a {
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
     line-height: 1;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
 }
 
 
@@ -308,6 +321,14 @@ a {
     display: flex;
     flex-direction: column;
     gap: 20px;
+}
+
+.contact-text {
+    text-align: justify;
+    margin: 0.5rem;
+    line-height: 1.5;
+    font-size: 1rem;
+    display: flex;
 }
 
 .form-container {
