--- a/styles.css
+++ b/styles.css
@@ -39,55 +39,7 @@ html {
     padding: 0 5rem;
 }
 
-/* NAVIGATION */
-.navbar {
-    width: 100%;
-    padding: 0.5rem;
-    text-align: center;
-    background-color: #000;
-}
 
-.navbar ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.navbar li {
-    display: inline;
-    margin: 0 1rem;
-}
-
-.navbar a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.navbar a:hover {
-    color: #d4af37;
-    transition: all 0.3s;
-}
-
-.title-container {
-    width: 100%;
-    margin: 0 auto;
-    padding: 2rem;
-    background-color: #f5f5f5;
- }
-
-.title {
-    margin-bottom: 1rem;
-    font-size: 3rem;
-    text-align: center;
-}
-
-.subtitle {
-    text-align: center;
-    font-size: 1.5rem;
-    color: #d4af37;
-    font-weight: bold;
-}
 
 h2 {
     margin-top: 1rem;
@@ -131,13 +83,104 @@ img {
     border-radius: 10px;
 }
 
+figcaption {
+    padding: 1rem;
+    text-align: center;
+}
+
+details {
+    padding: 1rem;
+}
+
+meter {
+    width: 100%;
+    height: 1rem;
+    margin-left: 1rem;
+}
+
+mark {
+    background-color: #000;
+    color: #fff;
+    font-weight: bold;
+    font-style: italic;
+}
+
+address {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    gap: 1.5rem;
+}
+
+address i {
+    font-size: 1.5rem;
+}
+
 a {
     color: #d4af37;
     text-decoration: none;
     font-weight: bold;
     text-align: start;
-    font-size: 1.3rem;
-    margin: 0.5rem 0 0.5rem 0;
+    font-size: 1rem;
+}
+
+samp {
+    font-size: 1rem;
+    color: #d4af37;
+}
+
+/* NAVIGATION */
+.navbar {
+    width: 100%;
+    padding: 0.5rem;
+    text-align: center;
+    background-color: #000;
+}
+
+.navbar ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar li {
+    display: inline;
+    margin: 0 1rem;
+}
+
+.navbar a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.navbar a:hover {
+    color: #d4af37;
+    transition: all 0.3s;
+}
+
+
+/* TITLE */
+.title-container {
+    width: 100%;
+    margin: 0 auto;
+    padding: 2rem;
+    background-color: #f5f5f5;
+}
+
+.title {
+    margin-bottom: 1rem;
+    font-size: 3rem;
+    text-align: center;
+}
+
+.subtitle {
+    text-align: center;
+    font-size: 1.5rem;
+    color: #d4af37;
+    font-weight: bold;
 }
 
 /* ABOUT ME SECTION */
@@ -245,11 +288,11 @@ a {
 
 .sub-project-container {
     height: 100%;
-    padding: 2rem 2rem 0 2rem;
+    padding: 0.5rem 2rem 0 2rem;
 }
 
 .projects-titles {
-    margin-bottom: 1rem;
+    margin: 1rem 0;
     font-size: 2rem;
     color: #d4af37;
 }
@@ -304,7 +347,7 @@ a {
     height: 100%;
     display: flex;
     justify-content: center;
-    padding: 0 5rem;
+    padding: 0 10rem;
 }
 
 .contact-information-container {
