--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+/*
+ * Global Reset:
+ * - Removes browser default margins and padding
+ * - Makes all elements use border-box sizing model
+ * - Ensures consistent rendering across browsers
+ */
 * {
     margin: 0;
     padding: 0;
@@ -121,34 +127,28 @@ samp {
     color: #d4af37;
 }
 
+
 /* NAVIGATION */
 .navbar {
     position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
-    padding: 0.1rem;
+    padding: 0.2rem;
     text-align: center;
     background-color: #d4af37;
-    z-index: 999;
     color: #000;
-}
-
-.navbar ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+    z-index: 999;
 }
 
 .navbar li {
     display: inline;
-    margin: 0 1rem;
+    margin: 0 1.5rem;
 }
 
 .navbar a {
     color: #000;
     text-decoration: none;
     font-weight: bold;
+    font-size: 0.85rem;
 }
 
 .navbar a:hover {
