--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ img {
     width: 100%;
     display: block;
     border-radius: 2px;
-    background-color: #000;
+    background-color: #d4af37;
 }
 
 /* Hero Section */
@@ -130,6 +130,7 @@ img {
     color: #f5f5f5;
 }
 
+/* About Me Information */
 .information {
     margin: 1rem;
 }
@@ -148,6 +149,7 @@ img {
     font-size: 1.1rem;
 }
 
+/* About Me Profile Photo */
 .profile-photo {
     width: 100%;
     margin: 0 1rem;
@@ -484,26 +486,7 @@ img {
     }
 }
 
-/* Mobile Devices (up to 767px) */
-@media (max-width: 767px) {
-
-    .about-me {
-        display: block;
-        text-align: center;
-    }
-
-    .about-me img {
-        max-width: 100%;
-        height: auto;
-        margin: 15px 0;
-    }
-
-    section {
-        padding: 10px 15px;
-    }
-}
-
-/* Tablets and smaller screens (up to 768px) */
+/* Tablets Responsive */
 @media (max-width: 768px) {
 
     .hamburger {
@@ -535,12 +518,36 @@ img {
     .nav-links a {
         font-size: 1rem;
     }
-}
 
-/* Mobile only (up to 480px) */
-@media (max-width: 480px) {
-    .nav-links {
-        width: 180px;
-        padding: 0.8rem;
+    .hero-section {
+        text-align: center;
     }
-}
+
+    h2 {font-size: 2.3rem;}
+    h3 {font-size: 1.8rem;}
+    h4 {font-size: 1.5rem;}
+
+    .about-me-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 2rem;
+    }
+
+    .work-education-section, .projects, .skills, .contact {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 1rem;
+    }
+
+    .work-experience, .education {
+        margin: 1rem;
+        text-align: justify;
+    }
+
+    .sub-project img{
+        width: 100%;
+    }
