--- a/styles.css
+++ b/styles.css
@@ -503,7 +503,7 @@ img {
         right: 0;
         width: 200px;
         padding: 1rem;
-        box-shadow: -2px 2px 5px rgba(0,0,0,0.2);
+        box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.2);
         border-radius: 0 0 0 5px;
     }
 
@@ -523,9 +523,17 @@ img {
         text-align: center;
     }
 
-    h2 {font-size: 2.3rem;}
-    h3 {font-size: 1.8rem;}
-    h4 {font-size: 1.5rem;}
+    h2 {
+        font-size: 2.3rem;
+    }
+
+    h3 {
+        font-size: 1.8rem;
+    }
+
+    h4 {
+        font-size: 1.5rem;
+    }
 
     .about-me-section {
         display: flex;
@@ -548,6 +556,7 @@ img {
         text-align: justify;
     }
 
-    .sub-project img{
+    .sub-project img {
         width: 100%;
     }
+}
